# hermes-yclaw

./: .gitignore  README.md  README.ur-pk.md  package-lock.json  package.json
apps/bootstrap-installer/: index.html  package.json
apps/bootstrap-installer/src/: app.tsx  store.ts  styles.css
apps/bootstrap-installer/src-tauri/: Cargo.toml  tauri.conf.json
apps/bootstrap-installer/src-tauri/icons/: icon.icns
apps/bootstrap-installer/src-tauri/src/: app.rs  bootstrap.rs  events.rs  install_script.rs  lib.rs  paths.rs  update.rs
apps/bootstrap-installer/src-tauri/src/launcher/: catalog.rs  commands.rs  config.rs  launch.rs  mod.rs  network.rs  silent.rs  state.rs  uninstall.rs  update.rs
apps/bootstrap-installer/src/components/: app-tile.tsx  mini-progress.tsx  pending-update-banner.tsx
apps/bootstrap-installer/src/lib/: launcher-mode.ts
apps/bootstrap-installer/src/routes/: app-detail.test.tsx  app-detail.tsx  catalog-app-detail.tsx  catalog.tsx  failure.tsx  home.test.tsx  home.tsx  progress.tsx  settings.tsx  success.tsx
apps/desktop/: index.html  package.json
apps/desktop/electron/: bootstrap-runner.cjs  bootstrap-runner.test.cjs
apps/desktop/src/: hermes.ts
apps/desktop/src/app/chat/: index.tsx
apps/desktop/src/components/: Backdrop.tsx  brand-mark.tsx
apps/desktop/src/i18n/: en.ts  ja.ts  runtime.test.ts  zh-hant.ts  zh.ts
apps/desktop/src/lib/: desktop-fs.ts  desktop-slash-commands.ts
apps/desktop/src/store/: onboarding.ts
apps/desktop/src/themes/: presets.ts
openspec/changes/complete-launcher-update-and-repair/: design.md  plan-ready.md  proposal.md  tasks.md
openspec/specs/launcher-app-registry/: spec.md
openspec/specs/launcher-cli-modes/: spec.md
openspec/specs/launcher-multi-app-install/: spec.md
openspec/specs/launcher-settings-ui/: spec.md
openspec/specs/launcher-uninstall-repair/: spec.md
openspec/specs/launcher-update-flow/: spec.md
openspec/specs/user-visible-branding/: spec.md
plans/: 2026-06-17-hermes-install-local-repo.md
scripts/: install.ps1  install.sh
scripts/tests/: test-install-ps1-stage-protocol.ps1  test-install-sh-stage-protocol.sh
web/: index.html
web/src/: App.tsx
web/src/i18n/: af.ts  de.ts  en.ts  es.ts  fr.ts  ga.ts  hu.ts  it.ts  ja.ts  ko.ts  pt.ts  ru.ts  tr.ts  uk.ts  zh-hant.ts  zh.ts
web/src/lib/: api.ts  gatewayClient.ts
web/src/pages/: ChannelsPage.tsx  SkillsPage.tsx  SystemPage.tsx
web/src/themes/: presets.ts
website/: docusaurus.config.ts
website/docs/getting-started/: installation.md
(+31 files in other folders)
